--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "vue-starter",
   "version": "0.1.0",
   "private": true,
+  "description": "This is a Vue-CLI Generated build with Vuex, Vue-Router, Jest and Eslint. I have also added a StandardJS package for eslint.",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@vue/test-utils": "1.0.0-beta.30",
@@ -33,6 +34,5 @@
     "vuex",
     "vue-router",
     "template"
-  ],
-  "description": "This is a Vue-CLI Generated build with Vuex, Vue-Router, Jest and Eslint. I have also added a StandardJS package for eslint."
+  ]
 }
